@@ -43,8 +43,9 @@ ________________________________________________________________________________
 ________________________________________________________________________________
 
 3.3.5.14
-	!+ add number of greeds needs disenchants to the grouploot frame
+	!+ add number of greeds needs disenchants to the grouploot frame - TEST
 	!* shaman totem interface
 	!* solve bug: main tank target and target target not shown
 	!* change fade module code to add fade to frames loaded after the moudle
+	!* solve bug: boss frames not updating
 ________________________________________________________________________________
